[package]
name = "auction"
version = "0.1.0"
description = "Microcosm Territory Auction - On-chain bidding and settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token", "metadata"] }

# Pin blake3 version to avoid edition2024 compatibility issues
blake3 = "=1.7.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
