[package]
name = "fragment"
version = "0.1.0"
description = "Microcosm NFT Fragmentation - Split Territory NFTs into tradeable fragments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fragment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token", "metadata"] }
mpl-token-metadata = "4.1.2"
# Pin blake3 version to avoid edition2024 compatibility issues
blake3 = { workspace = true }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1.36", features = ["full"] }
