[package]
name = "level-verifier"
version = "0.1.0"
description = "Microcosm Level Verifier - On-chain user level verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "level_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }

# Pin blake3 version to avoid edition2024 compatibility issues
blake3 = "=1.7.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
