[package]
name = "mcd-token"
version = "0.1.0"
description = "MCD (Microcosm Dollar) Token Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mcd_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# Pin blake3 version to avoid edition2024 compatibility issues
blake3 = "=1.7.0"

# Pin time version to avoid rustc 1.88.0 requirement
time = "=0.3.36"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
